# AORA_Forge

./: .env.example  .gitignore  ARCHITECTURE.md  BLOCKERS.md  Makefile  README.md  STATUS.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
aora_forge/: __init__.py  schemas.py
aora_forge/embodiments/: __init__.py  base.py  drone_figs.py  ground_habitat.py
aora_forge/evaluation/: __init__.py  ab_runner.py
aora_forge/failures/: __init__.py  clusterer.py  collector.py  taxonomy.py
aora_forge/llm/: __init__.py  anthropic_client.py  base.py  client.py  config.py  openai_client.py  prompts.py  vertex_client.py
aora_forge/orchestrator_hooks/: __init__.py  post_mission.py  stub_planner.py  tool_registry.py
aora_forge/scene_graph/: __init__.py  builder.py  context.py  update.py
aora_forge/skill_forge/: __init__.py  reconstruction.py  spec_generator.py  trainer_base.py
aora_forge/skill_forge/trainers/: __init__.py  classifier_trainer.py  code_skill_trainer.py  prompt_skill_trainer.py
aora_forge/skill_library/: __init__.py  registry.py  retriever.py  store.py
aora_forge/utils/: __init__.py  logging.py  synthetic_data.py
aora_forge/viz/: __init__.py  dashboard.py
docs/: 01_literature_synthesis.md  02_architecture.md  03_icra_narrative.md  04_mvp_milestones.md  05_risks.md  demo_transcript.md
scripts/: analyze_failures.py  dashboard.py  demo_full_loop.py  eval_skill.py  grow_skill.py  orchestrator_hook_demo.py  run_ab.py
tests/: test_anthropic_client.py  test_clusterer.py  test_collector.py  test_demo_loop.py  test_embodiments.py  test_library_roundtrip.py  test_orchestrator_hook.py  test_providers.py  test_retriever.py  test_scene_graph.py  test_schemas.py  test_spec_generator.py
